Fixed layout and render issue on episode
- The episode dynamic route was not rendering correctly in SSR mode.
- Fixed a layout issue with grid on episode
- Added some styling to TOC
- Added the scrollbars back for UI. May remove again later. Since the content can be long it makes sense to have the scrollbars back.

--- a/src/styles/lenis.css
+++ b/src/styles/lenis.css
@@ -19,13 +19,3 @@ html.lenis body {
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
 }
-
-/* CSS rules for the page scrollbar */
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
-}
-
-.scrollbar-hide {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
